# JenkinsFileGenerator

./: .vale.ini  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup-env.ps1  setup-env.sh  tasks.py
.changelog/: 26.changed.md  27.changed.md  27.fixed.md  28.changed.md  28.fixed.md  29.added.md  29.changed.md  31.changed.md  32.changed.md  32.fixed.md  32.removed.md  33.changed.md  35.fixed.md  36.fixed.md  37.added.md  38.added.md  39.fixed.md  40.changed.md  41.added.srt  42.changed.srt  README.md
.github/workflows/: bump-version.yml  changelog.yml  check.yml  ci.yml  publish-pypi.yml  publish-to-pypi.yml  pylint.yml  pylintrc  release.yml  vale.yml  version_update.yml
Samples/: Jenkinsfile  jenkinsfile_config_pr.yaml  slack_failure_blocks.mako
documentation/: archiveconfig.md  gitconfig.md  githubconfig.md  index.md  plasticscm.md  plasticscmconfig.md  propertiesconfig.md  pythonconfig.md  slacknotificationsconfig.md  unrealconfig.md  utilsconfig.md
examples/: ue_advanced_checkout.yaml  ue_full_example.yaml  ue_simple_checkout.yaml
examples/Customization/: unreal_postBuildGraphTasks.mako
generator/: __init__.py  __main__.py
generator/core/: base_feature.py  batch.py  config_validator.py  constants.py  dependency_resolver.py  feature_registry.py  generated_blocks.py  jenkins_file_generator.py  pipeline_config.py  template_context.py  template_validator.py  validation_context.py
generator/documentation/: documentation_generator.py
generator/features/: __init__.py  archive.py  git.py  github.py  plasticscm.py  properties.py  slack_notifications.py  unreal.py  utils.py
generator/templates/: archive.mako  base_jenkinsfile.mako  git.mako  github.mako  plasticscm.mako  slack_notifications.mako  unreal.mako  utils.mako
generator/utils/: __init__.py  documentation_generator.py  graph.py  groovy.py  linter.py
generator/utils/validation/: base_validator.py  config_validator.py  template_validator.py
src/generator/: __init__.py  __main__.py  main.py
src/generator/core/: base_feature.py  dependency_resolver.py  generated_blocks.py  jenkins_file_generator.py  pipeline_config.py  template_context.py
src/generator/features/: __init__.py  archive.py  git.py  github.py  plasticscm.py  properties.py  python.py  slack_notifications.py  unreal.py  utils.py
src/generator/templates/: archive.mako  base_jenkinsfile.mako  git.mako  github.mako  plasticscm.mako  python.mako  unreal.mako  utils.mako
src/generator/utils/: documentation_generator.py  graph.py  groovy.py  linter.py
src/generator/utils/validation/: base_validator.py  config_validator.py  template_validator.py
