[project]
name = "JenkinsfileGenerator"
version = "1.5.0"
description = "Module that generates Jenkins pipeline files from YAML configuration files using a modular feature-based approach"
readme.content-type = "text/markdown"
readme.file = "README.md"
keywords = [
  "jenkinsfile",
  "unreal engine",
  "unity"
]
license = {file = "LICENSE"}
maintainers = [
  { name = "Michael Delva", email = "michael@emidee.net" },
]
authors = [
  { name = "Michael Delva", email = "michael@emidee.net" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = [
  "annotated-types==0.7.0",
  "colorama==0.4.6",
  "types-colorama==0.4.15",
  "Mako==1.3.9",
  "MarkupSafe==3.0.2",
  "packaging==24.2",
  "psutil==6.1.1",
  "pydantic==2.11.7",
  "pydantic_core==2.33.2",
  "PyYAML==6.0.2",
  "typing-inspection==0.4.1",
  "typing_extensions==4.14.0",
  "types-PyYAML==6.0.12"
]
urls.Changelog = "https://github.com/TheEmidee/JenkinsfileGenerator/releases"
urls.Homepage = "https://github.com/TheEmidee/JenkinsFileGenerator"
urls.Source = "https://github.com/TheEmidee/JenkinsfileGenerator"
urls.Tracker = "https://github.com/TheEmidee/JenkinsfileGenerator/issues"

[project.optional-dependencies]
lint = [ 
  "ruff>=0.1.0",
  "mypy>=1.10.0"
]

dist = [
  "hatchling>=1.26",
  "build==1.4.0",
  "wheel==0.45.1",
]

dev = ["JenkinsfileGenerator[lint, dist]"]

[tool.ruff]
line-length = 150
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = true

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_package"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]
exclude = [
    "/.git",
    "/.github",
    "/.pytest_cache",
    "/__pycache__",
]

[project.scripts]
jenkinsfilegenerator = "generator.main:main"