[project]
name = "JenkinsfileGenerator"
dynamic = ["version"]
description = "Module that generates Jenkins pipeline files from YAML configuration files using a modular feature-based approach"
readme.content-type = "text/markdown"
readme.file = "README.md"
keywords = [
  "jenkinsfile",
  "unreal engine",
  "unity"
]
license = {file = "LICENSE"}
maintainers = [
  { name = "Michael Delva", email = "michael@emidee.net" },
]
authors = [
  { name = "Michael Delva", email = "michael@emidee.net" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = [
  "annotated-types",
  "colorama",
  "types-colorama",
  "invoke",
  "types-invoke",
  "Mako",
  "MarkupSafe",
  "packaging",
  "psutil",
  "pydantic",
  "pydantic_core",
  "PyYAML",
  "typing-inspection",
  "typing_extensions",
  "types-PyYAML"
]

urls.Changelog = "https://github.com/TheEmidee/JenkinsfileGenerator/releases"
urls.Homepage = "https://github.com/TheEmidee/JenkinsFileGenerator"
urls.Source = "https://github.com/TheEmidee/JenkinsfileGenerator"
urls.Tracker = "https://github.com/TheEmidee/JenkinsfileGenerator/issues"

[project.optional-dependencies]
lint = [ 
  "ruff",
  "mypy"
]

dist = [
  "hatchling",
  "build",
  "wheel",
  "twine",
  "towncrier"
]

dev = ["JenkinsfileGenerator[lint, dist]"]

[tool.ruff]
line-length = 150
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
warn_return_any = true
disallow_untyped_defs = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/generator"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]
exclude = [
    "/.git",
    "/.github",
    "/.pytest_cache",
    "/__pycache__",
]

[project.scripts]
jenkinsfilegenerator = "generator.main:main"

[tool.towncrier]
package = "JenkinsfileGenerator"
package_dir = "src"
filename = "CHANGELOG.md"
directory = ".changelog"
underlines = ["", "", ""]
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/TheEmidee/JenkinsFileGenerator/issues/{issue})"
all_bullets = true

[[tool.towncrier.type]]
name = "Security"

[[tool.towncrier.type]]
name = "Removed"

[[tool.towncrier.type]]
name = "Deprecated"

[[tool.towncrier.type]]
name = "Added"

[[tool.towncrier.type]]
name = "Changed"

[[tool.towncrier.type]]
name = "Fixed"